# wareflow-openenv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
wareflow/: __init__.py  environment.py  grader.py  models.py
