[project]
name = "wareflow-openenv"
version = "0.1.0"
description = "AI warehouse order fulfillment environment using OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "fastapi",
    "uvicorn",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wareflow", "server"]